--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ span {
 .about {
   width: 100%;
   height: 100%;
-  /* min-height: 100vh;*/
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -281,4 +281,38 @@ span {
   margin: 5px 0;
   padding: 10px;
   border-radius: 4px;
+}
+
+.contact-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.location-box {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.location-box h2 {
+  text-align: center;
+  margin-top: 3em;
+  margin-bottom: 1em;
+  font-size: 36px;
+}
+
+.location {
+  max-width: 50em;
+  height: 100%;
+  margin: 1rem auto;
+  text-align: center;
+  margin-bottom: 3em;
+}
+
+iframe {
+  height: 30em;
+  width: 29em;
+  border-radius: 0.8rem;
+  box-shadow: 0 0 20px var(--color3);
 }
